<resources>
    <string name="app_name">유량 센서 앱</string>
    <string name="noname">이름 없음(알 수 없는 장치)</string>
    <string name="ble_connected">블루투스 장치와 연결이 되었습니다.</string>
    <string name="unavailable_device">Blueooth 미지원</string>
    <string name="ble_not_supporting">장치가 BLE를 지원하지 않거나, 비활성화되어 있습니다.\nBluetooth를 다시 켜거나, BLE을 지원하는 장치에서 사용하세요.</string>
    <string name="ble_not_connected">블루투스 장치와 연결이 되지 않았습니다.</string>
    <string name="permission_ble_not_connected_alert_title">권한 제한</string>
    <string name="permission_blue_not_connected">"위치 정보 및 액세스 권한이 허용되지 않아서 Bluetooth를 검색 및 연결할 수 없습니다."</string>
    <string name="expectation_date_string_prefix">필터 교환 예상 날짜는</string>
    <string name="passed_expectation_date">필터 교환 날짜가 </string>
    <string name="passed_expectation_days">일 지났습니다.</string>
    <string name="request_direct_change">바로 필터 교환이 필요합니다.</string>
    <string name="expectation_date_string">yyyy년 MM월 dd일입니다.</string>
    <string name="expectation_date_unknown">아직 알 수 없습니다.</string>
    <string name="blank_string"> </string>
    <string name="unix_year">년</string>
    <string name="unix_month">월</string>
    <string name="two_digit_string">  </string>
    <string name="unix_day">일</string>
    <string name="finish_word">입니다.</string>
    <string name="used_days">사용 일수 </string>
    <string name="left_days">잔여 일수</string>
    <string name="used_litters">사용 유량</string>
    <string name="left_litters">잔여 유량</string>
    <string name="litter">리터</string>
    <string name="months">개월</string>
    <string name="days">일</string>
    <string name="OK">예</string>
    <string name="CANCEL">아니오</string>
    <string name="custom_dialog_title">필터 교체 날짜 업데이트</string>
    <string name="filter_update_content">필터 교체 날짜 업데이트를 진행하시겠습니까?</string>
</resources>