<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operation_status_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"

        android:fontFamily="@font/notosanskr_bold"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/expectation_date_string"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unix_year_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"

            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/two_digit_string"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/unix_year_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/unix_year"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/unix_month_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/two_digit_string"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/unix_month_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/unix_day"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/unix_day_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/two_digit_string"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/unix_day_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/unix_day"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/waterflow_status"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/notosanskr_regular"
                android:text="@string/used_days" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/notosanskr_regular"
                android:text="@string/used_days" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>